setting up styles with sass

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,14 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
 <BaseLayout >
-  <div class="landing">
-    
+  <div class="landing container">
+    <div class="test-sass">hello world!</div>
+    <div class="even-columns">
+      <div>
+        <p class="fs-xl fw-bold">Big columns</p>
+      </div>
+      <div>Columns</div>
+      <div>Columns</div>
+    </div>
   </div>
 </BaseLayout>
