--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -21,12 +21,12 @@ const menus: { label: string; href: string }[] = [
       Hadad Dus
     </a>
     <div class="menu">
-      <ul class="flex">
+      <ul class="flex flow">
         {
           menus.map((menu, index) => (
             <li class="menu-item">
               <a href={menu.href}>
-                <span class="menu-item-number">0{index + 1}. </span>{menu.label}
+                <span class="menu-item-number text-accent-400">0{index + 1}. </span>{menu.label}
               </a>
             </li>
           ))
