--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,8 @@
 ---
+import Main from "@components/Main.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
-
 ---
 
-<BaseLayout >
-  <div class="landing container">
-    <div class="test-sass">hello world!</div>
-    <div class="even-columns">
-      <div>
-        <p class="fs-xl fw-bold">Big columns</p>
-      </div>
-      <div>Columns</div>
-      <div>Columns</div>
-    </div>
-  </div>
+<BaseLayout>
+  <Main />
 </BaseLayout>
