--- a/src/style/base/_general.scss
+++ b/src/style/base/_general.scss
@@ -4,11 +4,11 @@
 
 body {
   font-family: $ff-body;
-  font-weight: $fw-regular;
+  font-weight: $fw-light;
   font-size: $fs-body;
-  color: $color-neutral-800;
-  background-color: $color-neutral-100;
-  // line-height: $body-line-height;
+  color: var(--color-neutral-800);
+  background-color: var(--color-neutral-100);
+  // line-height: 1.25rem;
 }
 
 $link-color: $color-accent-700;
