--- a/src/style/utilities/_even-columns.scss
+++ b/src/style/utilities/_even-columns.scss
@@ -11,7 +11,7 @@
     & > * {
       flex: 1;
       flex-wrap: nowrap;
-      justify-content: center;
+      // justify-content: center;
     }
   }
 }
