--- a/src/style/variables/_theme.scss
+++ b/src/style/variables/_theme.scss
@@ -2,4 +2,5 @@
 
 $active-theme: $light;
 // allow people to change the theme 
-$enable-media-query-dark-mode: true
+$enable-media-query-dark-mode: true;
+
