--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -26,3 +26,4 @@ const {
   href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,500;0,600;0,700;1,400;1,600&display=swap"
   rel="stylesheet"
 />
+<link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@300;400;500;700&display=swap" rel="stylesheet">
