--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,4 +1,5 @@
 ---
+import type { propsToFilename } from "astro/assets/utils";
 import Head from "../components/Head.astro";
 import Nav from "../components/Nav.astro";
 
@@ -14,13 +15,16 @@ const {
 ---
 
 <!DOCTYPE html>
-<html lang="en">
+<!--  @ts-ignore -->
+<html lang="en" data-theme="dark" >
   <head>
     <Head title={title} description={description} />
   </head>
-  <body class="gap-8">
-    <Nav />
-    <slot />
+  <body class="gap-8" >
+    <div class="container">
+      <Nav />
+      <slot />
+    </div>
     <!-- <Footer /> -->
 
   </body>
