--- a/src/style/variables/_typography.scss
+++ b/src/style/variables/_typography.scss
@@ -12,9 +12,12 @@ $-ff-serif: serif;
 $ff-base: $-ff-sans;
 $ff-accent: $-ff-sans;
 
-$ff-primary: "Be Vietnam Pro", sans-serif;
-$ff-body: var($ff-primary);
-$ff-heading: var($ff-primary);
+$ff-primary: "Be Vietnam Pro";
+$ff-secondary: "IBM Plex Mono";
+$ff-system: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+$ff-body: $ff-primary, $ff-system;
+$ff-heading: $ff-primary;
 
 // ==== font weight ========
 $fw-light: 300;
@@ -31,11 +34,11 @@ $fs-xl: 2.5rem;
 $fs-2xl: 3.5rem;
 
 // ==== contextual font variables ========
-$fs-body: var($fs-sm);
-$fs-primary-heading: var($fs-xl);
-$fs-secondary-heading: var($fs-regular);
-$fs-nav: var($fs-regular);
-$fs-button: var($fs-xs);
+$fs-body: $fs-regular;
+$fs-primary-heading: $fs-xl;
+$fs-secondary-heading: $fs-regular;
+$fs-nav: $fs-regular;
+$fs-button: $fs-xs;
 
 // used for generating utility classes
 $font-sizes: (
@@ -53,6 +56,26 @@ $font-weights: (
   semi-bold: $fw-semi-bold,
   bold: $fw-bold,
 );
+
+h1 {
+  font-size: $fs-2xl;
+}
+
+h2 {
+  font-size: $fs-xl;
+}
+
+h3 {
+  font-size: $fs-lg;
+}
+
+h4 {
+  font-size: $fs-regular;
+}
+
+h5 {
+  font-size: $fs-sm;
+}
 
 // $font-sizes: (
 //   "small": (
