adding content to the markup

--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -9,10 +9,12 @@ import SVG from "./SVG.astro";
     <div class="even-columns">
       <div class="intro flow">
         <p>
-          Hi, I'm Hadad ✋🏼 a software Mentat with a passion for translating
+          Hi, I'm Hadad ✋🏼 
+          a software Mentat with a passion for translating
           instructions to computers. If you are up for it let’s build a kind,
           smarter, faster, and more connected future together. Welcome to my
-          digital realm! ✨ 🚀 This is the way.
+          digital realm! ✨ 🚀  
+          <span class="pl-4">▷ This is the way.</span>
         </p>
         <div class="flex">
           <button>Let's talk</button>
