--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -5,10 +5,14 @@ import SVG from "./SVG.astro";
 import Intro from "./Intro.astro";
 import Experience from "./Experience.astro";
 import Projects from "./Projects.astro";
+import Skills from "./Skills.astro";
+import Contact from "./Contact.astro";
 ---
 
 <main>
   <Intro />
   <Experience />
   <Projects />
+  <Skills />
+  <Contact />
 </main>
