--- a/src/components/common/Icon.astro
+++ b/src/components/common/Icon.astro
@@ -1,6 +1,6 @@
 ---
 import type { HTMLAttributes } from 'astro/types';
-import { iconPaths } from '../constants/IconPaths';
+import { iconPaths } from '../../constants/IconPaths';
 
 export interface Props {
 	icon: keyof typeof iconPaths;
