--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -2,20 +2,21 @@
 import { getCollection, getEntry } from "astro:content";
 
 const projects = await getCollection("projects");
+const sortedProject = projects.sort((a, b) => a.data.sortOrder - b.data.sortOrder)
 ---
 
-<section class="my-13">
+<section class="mt-10">
   <h2>Projects</h2>
   <p>I've hacked around few things worth looking at</p>
   <div class="flex wrap gap-10 mt-8">
     {
-      projects.map(({ data }) => (
+      sortedProject.map(({ data }) => (
         <div class="project-card | pt-3">
           <div class="flex justify-between  px-2">
             <h4>{data.title}</h4>
             <span>:icon-link</span>
           </div>
-          <p class="my-5  px-2 line-clamp-3">{data.description}</p>
+          <p class="description | my-5  px-2 line-clamp-3">{data.description}</p>
           <div class="flex gap-3 bg-neutral-100 py-1 px-2">
             <a href={data.link} class="flex">
               <span>:icon-github</span>
@@ -32,7 +33,7 @@ const projects = await getCollection("projects");
       ))
     }
   </div>
-  <div class="flex center pt-10 pb-13">
+  <div class="flex center mt-10">
     <button>Check more</button>
   </div>
 </section>
@@ -55,6 +56,10 @@ const projects = await getCollection("projects");
     }
   }
 
+  .description {
+    min-height: 3.70rem;
+  }
+
 
   p,
   li,
@@ -66,11 +71,22 @@ const projects = await getCollection("projects");
   ul {
     list-style: none;
   }
+
+  h2{
+    background-image:  linear-gradient(130deg, rgb(255, 255, 255) 0%, rgba(255, 255, 255, 0.31) 66%);
+    // linear-gradient(130deg, rgb(255, 255, 255) 0%, rgba(255, 255, 255, 0.31) 66%);
+    // color: aliceblue;
+    display: inline-block;
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    -webkit-text-fill-color: transparent;
+  }
 </style>
 
 
 
-// TODO: add illustration above
-// - card background like gitness
-// - on hover header color to accent
-// - something about border and glow
+<!--  TODO: add illustration above
+ - card background like gitness
+ - on hover header color to accent
+ - something about border and glow -->
