--- a/src/style/custom/_general.scss
+++ b/src/style/custom/_general.scss
@@ -2,4 +2,7 @@
 
 body {
   background-image: $background-image-temp1;
+  // -webkit-font-smoothing:
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
