--- a/src/components/common/Icon.astro
+++ b/src/components/common/Icon.astro
@@ -1,58 +1,40 @@
 ---
-import type { HTMLAttributes } from 'astro/types';
-import { iconPaths } from '../../constants/IconPaths';
+import { iconPaths } from "constants/IconPaths";
 
 export interface Props {
-	icon: keyof typeof iconPaths;
-	color?: string;
-	gradient?: boolean;
-	size?: string;
-  height?: number;
-  width?: number;
+  icon: keyof typeof iconPaths;
+  color?: string;
+  shade?: string;
+  gradient?: boolean;
+  size?: string;
+  type?: "normal" | "button";
 }
+const {
+  icon,
+  color = "currentcolor",
+  shade,
+  size,
+  type = "normal",
+  ...props
+} = Astro.props;
 
-const { color = 'currentcolor', gradient, icon, size, height= 40, width = 40 } = Astro.props;
-const iconPath = iconPaths[icon];
+const properties = {
+  "{{color}}": color,
+  "{{size}}": size,
+  "{{shade}}": shade,
+};
 
-const attrs: HTMLAttributes<'svg'> = {};
-if (size) attrs.style = { '--size': size };
-
-const gradientId = 'icon-gradient-' + Math.round(Math.random() * 10e12).toString(36);
+const formattedPath = Object.keys(properties).reduce((path, current) => {
+  return path.replaceAll(current, properties[current]);
+}, iconPaths[icon]);
 ---
 
-<svg
-	xmlns="http://www.w3.org/2000/svg"
-	width={width}
-	height={height}
-	viewBox="0 0 256 256"
-	aria-hidden="true"
-	stroke={gradient ? `url(#${gradientId})` : color}
-	fill={gradient ? `url(#${gradientId})` : color}
-	{...attrs}
->
-	<g set:html={iconPath} />
-	{
-		gradient && (
-			<linearGradient
-				id={gradientId}
-				x1="23"
-				x2="235"
-				y1="43"
-				y2="202"
-				gradientUnits="userSpaceOnUse"
-			>
-				<stop stop-color="var(--gradient-stop-1)" />
-				<stop offset=".5" stop-color="var(--gradient-stop-2)" />
-				<stop offset="1" stop-color="var(--gradient-stop-3)" />
-			</linearGradient>
-		)
-	}
-</svg>
-
-<style>
-	svg {
-		vertical-align: middle;
-		width: var(--size, 1em);
-		height: var(--size, 1em);
-	}
-</style>
+{
+  type === "button" ? (
+    <button data-type="flat" {...props}>
+      <Fragment set:html={formattedPath} />
+    </button>
+  ) : (
+    <Fragment set:html={formattedPath} />
+  )
+}
