--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -31,7 +31,7 @@ const socials: socialType[] = [
 ---
 
 <section class="mt-10">
-  <h3>Contact - Socials</h3>
+  <h3 class="fade" style="--fade-starter: 90%">Contact - Socials</h3>
   <div class="fs-xs fw-semi-bold flow" style="--flow-spacer: 1rem">
     <div class="flex">
       <span> :icon Email:</span>
