--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -2,12 +2,15 @@
 import { getCollection, getEntry } from "astro:content";
 
 const projects = await getCollection("projects");
-const sortedProject = projects.sort((a, b) => a.data.sortOrder - b.data.sortOrder)
+const sortedProject = projects.sort(
+  (a, b) => a.data.sortOrder - b.data.sortOrder
+);
 ---
 
 <section class="mt-10">
-  <h2>Projects</h2>
+  <h2 class="fade">Projects</h2>
   <p>I've hacked around few things worth looking at</p>
+
   <div class="flex wrap gap-10 mt-8">
     {
       sortedProject.map(({ data }) => (
@@ -16,7 +19,9 @@ const sortedProject = projects.sort((a, b) => a.data.sortOrder - b.data.sortOrde
             <h4>{data.title}</h4>
             <span>:icon-link</span>
           </div>
-          <p class="description | my-5  px-2 line-clamp-3">{data.description}</p>
+          <p class="description | my-5  px-2 line-clamp-3">
+            {data.description}
+          </p>
           <div class="flex gap-3 bg-neutral-100 py-1 px-2">
             <a href={data.link} class="flex">
               <span>:icon-github</span>
@@ -57,9 +62,8 @@ const sortedProject = projects.sort((a, b) => a.data.sortOrder - b.data.sortOrde
   }
 
   .description {
-    min-height: 3.70rem;
+    min-height: 3.7rem;
   }
-
 
   p,
   li,
@@ -71,20 +75,7 @@ const sortedProject = projects.sort((a, b) => a.data.sortOrder - b.data.sortOrde
   ul {
     list-style: none;
   }
-
-  h2{
-    background-image:  linear-gradient(130deg, rgb(255, 255, 255) 0%, rgba(255, 255, 255, 0.31) 66%);
-    // linear-gradient(130deg, rgb(255, 255, 255) 0%, rgba(255, 255, 255, 0.31) 66%);
-    // color: aliceblue;
-    display: inline-block;
-    background-clip: text;
-    -webkit-background-clip: text;
-    color: transparent;
-    -webkit-text-fill-color: transparent;
-  }
 </style>
-
-
 
 <!--  TODO: add illustration above
  - card background like gitness
