--- a/src/style/utilities/_extra.scss
+++ b/src/style/utilities/_extra.scss
@@ -1,4 +1,5 @@
 @use "../variables/sizes" as *;
+@use "../variables/functions" as *;
 
 // === Layout ===
 .flex {
@@ -26,6 +27,14 @@
   flex-wrap: wrap;
 }
 
+.inline {
+  display: inline;
+}
+
+.inline-block {
+  display: inline-block;
+}
+
 @each $size, $value in $sizes {
   .gap-#{$size} {
     gap: $value;
@@ -36,4 +45,14 @@
 // === text ===
 .text-center{
   text-align: center;
+}
+
+// === border ===
+.radius{
+  border-radius: size(2);
+}
+
+.radius-flat{
+  border-radius: size(10);
+  border: none;
 }
