--- a/src/style/components/_button.scss
+++ b/src/style/components/_button.scss
@@ -9,6 +9,7 @@ button, .button{
   border-radius: 0.3rem;
   font-size: $fs-xs;
   font-weight: $fw-semi-bold;
+  text-decoration: none;
   background-image: $background--gradient;
   border: none;
   color: var(--color-neutral-900);
