--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -13,8 +13,8 @@ const menus: { label: string; href: string }[] = [
   <div class="flex justify-between">
     <a href="/" class="site-title flex">
       <Icon
-        icon="terminal-window"
-        color="var(--color-accent-700)"
+        icon="terminal"
+        color="white"
         size="1.6em"
       />
       <span>Hadad Dus</span>
